# SaddlePointsElasticKnots

./: .gitmodules  CMakeLists.txt  FindSaddlePoint.cpp  FindSaddlePoint.h  KnotVisualizer.cpp  KnotVisualizer.h  OldCMakeLists.txt  README.md  SmashKnot.cpp  distanceEnergy.cpp  distanceEnergy.h  helpers.cpp  helpers.h  hessian.txt  setup.py  test1.cpp
python/: ConnectivityOfExtremeValues.ipynb  ElasticKnotsSaddlePoint.ipynb  FindSaddlePoint.ipynb  MEP.py  OptimizeCubicPath.ipynb  OptimizeLinearPath.ipynb  OptimizePath.ipynb  SaddlePoint2D.ipynb  ShowPath.ipynb  UnKnottingByRandomizing.ipynb
python/Experiments/: CombiningCubic.ipynb  CombiningKnots.ipynb  Demo-0-Test.ipynb  Demo-1-Simulation.ipynb  Demo-2A-Clustering.ipynb  Demo-2B-Analysis.ipynb  LinearNoCollision.ipynb  NoCollision.ipynb  OptimizePath-Copy1.ipynb  OptimizePath-Copy2.ipynb  ReduceSize.ipynb  Test1.ipynb  Test2.ipynb  UnKnottingByPulling.ipynb
python/Paths/: ASaddleBpath.npz  optimizedhighSpringQuaterpathAB2.npz  optimizedhighSpringpathAB2.npz  optimizedoptimizedoptimizedoptimizedoptimizedpathAB2.npz  optimizedoptimizedoptimizedoptimizedpathAB2.npz  optimizedoptimizedoptimizedpathAB2.npz  optimizedoptimizedoptimizedshortendASaddleBpath.npz  optimizedoptimizedpathAB2.npz  optimizedoptimizedquaterASaddleBpath.npz  optimizedoptimizedshortendASaddleBpath.npz  optimizedpathAB2.npz  optimizedquaterASaddleBpath.npz  optimizedshortendASaddleBpath.npz  pathAB2.npz  shortendASaddleBpath.npz
python/Paths/HasIntersection/: optimizedAdaptiveStepoptimizedoptimizedoptimizedoptimizedoptimizedoptimizedpathAB2.npz  optimizedoptimizedoptimizedoptimizedoptimizedoptimizedoptimizedpathAB2.npz  optimizedoptimizedoptimizedoptimizedoptimizedoptimizedpathAB2.npz
python/Paths/Old/: ASaddleBpath.npz  OSoptimizedpathHighRes1.npz  optimizedhalfpathAB2.npz  optimizedpathAB2_smallStep.npz  optimizedpathHighRes1.npz  path.npz  pathAB1.npz  pathHighRes1.npz
